--- a/Bookshopping/src/main/resources/application.properties
+++ b/Bookshopping/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bookshopping
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.tomcat.initial-size=5
 
